--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="./favicon.ico" />
-    <title>simon-says-vue2</title>
-    <script defer="defer" src="./js/chunk-vendors.195f5200.js"></script>
-    <script defer="defer" src="./js/app.546a4538.js"></script>
-    <link href="./css/app.9654334d.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but simon-says-vue2 doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>simon-says-vue2</title><script defer="defer" src="/js/chunk-vendors.195f5200.js"></script><script defer="defer" src="/js/app.5a4e3e68.js"></script><link href="/css/app.2dd7defb.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but simon-says-vue2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
